--- a/MyDreamHomeApp/appsettings.json
+++ b/MyDreamHomeApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=MyDreamHomeApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=MyDreamHomeApp;Trusted_Connection=True;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
